# Pico-Rocket

./: README.md
Base/: rfm95.py
Flight/: CMakeLists.txt  rfm95.c
